<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/inputExamCourse"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_add_course_input"
        android:hint="@string/exam_course_name_hint"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inputExamTime"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_add_course_input"
        android:hint="@string/exam_time_hint"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inputExamLocation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_add_course_input"
        android:hint="@string/exam_location_hint"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inputExamSeat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_add_course_input"
        android:hint="@string/exam_seat_hint"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inputExamType"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_add_course_input"
        android:hint="@string/exam_type_hint"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:textSize="14sp" />
</LinearLayout>
